outputs/tsp_constructive-constructive/2025-09-20_00-37-24/evaluations/problem_eval4248259477588943392_stdout.txt
Traceback (most recent call last):
  File "D:\MCTS-AHD-master\problems\tsp_constructive\eval.py", line 11, in <module>
    from gpt import select_next_node_v2 as select_next_node
  File "D:\MCTS-AHD-master\problems\tsp_constructive\gpt.py", line 1
    importance" (based on average distances to other nodes), creating a balance between proximity and global connectivity. It first checks for the destination node, then selects among the nearest neighbors with probabilities adjusted by both distance and importance scores.}
              ^
SyntaxError: unterminated string literal (detected at line 1)

During handling of the above exception, another exception occurred:

Traceback (most recent call last):
  File "D:\MCTS-AHD-master\problems\tsp_constructive\eval.py", line 13, in <module>
    from gpt import select_next_node
  File "D:\MCTS-AHD-master\problems\tsp_constructive\gpt.py", line 1
    importance" (based on average distances to other nodes), creating a balance between proximity and global connectivity. It first checks for the destination node, then selects among the nearest neighbors with probabilities adjusted by both distance and importance scores.}
              ^
SyntaxError: unterminated string literal (detected at line 1)
